# themoonexports.github.io

./: .aicontext  .editorconfig  .env.development  .env.production  .env.template  .eslintignore  .eslintrc.json  .firebaserc  .gitignore  .htaccess  .htaccess.new  404.html  404.shtml  AI_CONTEXT_SUMMARY.md  BEHAVIORAL_TRANSFORMATION.md  BingSiteAuth.xml  CHANGELOG.md  CNAME  CONTRIBUTING.md  DevOps.md  Kamran-Khan.vcf  README.md  SECURITY_CHECKLIST.md  SEO_INFRASTRUCTURE.md  about-horn-plates.htm  about.html  about162c.html  ai-organize-files.sh  booking.html  buffalo-horn-bowls.html  buffalo-horn-plates.html  buffalo-horn-plates162c.html  bugs.md  check-production-readiness.sh  comprehensive-validation.html  contact.html  contact162c.html  dropdown.md  faq.html  favicon.ico.lnk  (+28 more)
.docs/: js-modernization.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.idx/: dev.nix
ReactSPA/themoonexports-react/: .env.example  .eslintrc.json  .prettierrc  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
assets/: forms-d2de172c.js
assets/css/: theme.css
auth/: callback.html
backend/: .env.backend.template  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  nginx.conf
backend/include/: config.h
backend/src/: main.c
backend/src/routes/: contact.c  contact.h  products.c  products.h
backend/tests/: CMakeLists.txt  test_auth.c  test_routes.c  test_validation.c
backup/: about-horn-plates.htm
blog/: .htaccess  error_log  index.html  index162c.html  wp-config.php
blog/55/: index.html  index162c.html  index1ea5.html  index5a58.html  index7d75.html  index9a7b.html  index9f21.html  indexcce0.html
css/: behavioral.css  bootstrap-theme.css.lnk  bootstrap-theme.css.map.lnk  bootstrap-theme.min.css.lnk  bootstrap.css.lnk  bootstrap.css.map.lnk  bootstrap.min.css.lnk  carousel.css  crafts-ui.css  custom.css  dropdown-social.css  mathematical-tokens.css  one.css  one.css.lnk  w.css  w.css.lnk  z-index.css
de/: index-2.html  index.html
docs/: AI_CONTEXT_SUMMARY.md  AUTH_INTEGRATION.md  AUTO_YEAR_UPDATE_REPORT.md  BACKEND_IMPLEMENTATION.md  BACKEND_NEXT_PHASE_PLAN.md  BACKGROUND_COMPONENT.md  BACKGROUND_REFACTORING_SUMMARY.md  CLEANUP_REPORT.md  COBOL_INTEGRATION_PLAN.md  CONTENT_PRESERVATION_VALIDATION.md  DECLUTTER_CHANGELOG.md  DESIGN_SYSTEM.md  DIRECTORY_STRUCTURE.md  ENTERPRISE_SEO_IMPLEMENTATION.md  ENTERPRISE_SEO_VALIDATION_COMPLETE.md  ENVIRONMENT_CONFIGURATION.md  FILE_STRUCTURE.md  FINAL_CLEANUP_COMPLETION_REPORT.md  FONT_AWESOME_BOOTSTRAP_FIX_COMPLETE.md  LANGUAGE_CONNECTIONS_SETUP.md  LANGUAGE_CONNECTIVITY_VERIFICATION.md  MODULAR_COMPONENTS.md  NEXT_PHASE_DEVELOPMENT_PLAN.md  ORGANIZATION_REPORT.md  OUTSTANDING_WORK_AND_BUGS.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  PHASE_4_IMPLEMENTATION.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READINESS_SUMMARY.md  REACT_IMPLEMENTATION_GUIDE.md  REACT_MIGRATION_CHECKLIST.md  REACT_MIGRATION_PLAN.md  README.md  SECURITY_CHECKLIST.md  SEO_INFRASTRUCTURE.md  SOCIAL_ICONS_TROUBLESHOOTING.md  SOCIAL_MEDIA_ICONS_FIX_REPORT.md  TESTING_PLAN.md  (+2 more)
files/: styles.css  theme.js  theme.scss.css
fonts/: glyphicons-halflings-regular.eot.lnk  glyphicons-halflings-regular.ttf.lnk  glyphicons-halflings-regular.woff.lnk  glyphicons-halflings-regular.woff2.lnk
fr/: index.html
german/: index.html
images/: ctaback.html  home.html  services.html  workshop.html
includes/: footer.html  header.html
instago/: index.html
instagram-tools/: index.html
js/: application.js  application.js.lnk  auto-year-update.js  behavioral-engine.js  bootstrap.js.lnk  bootstrap.min.js.lnk  components.js  consent.js  forms.js  ie-emulation-modes-warning.html  ie10-viewport-bug-workaround.html  main.js  navigation.js  npm.js.lnk  utils.js
legal/: imprint.html  imprint162c.html  index.html  privacy.html  privacy162c.html  terms.html  terms162c.html
react/: package.json  tsconfig.json  vite.config.ts
scripts/: setup-env.sh  validate-cleanup.sh
static-site-backup/: about.html  buffalo-horn-bowls.html  buffalo-horn-plates.html  faq.html  index.html  license.html  wooden-crafts.html
tools/: implement-auto-year-update.sh  organize-cleanup.sh  test-auto-year-update.sh  update-sitemap-dates.sh  validate-organization.sh
(+515 files in other folders)
